--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
+    "twilio": "^5.10.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
