--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
+    "resend": "^6.4.2",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.10.5",
     "zod": "^4.1.12"
