--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@stripe/stripe-js": "^8.5.3",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.7",
@@ -44,6 +45,7 @@
     "react-hot-toast": "^2.6.0",
     "react-phone-number-input": "^3.4.14",
     "resend": "^6.4.2",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.10.5",
     "zod": "^4.1.12"
