--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.543.0",
-    "next": "15.5.2",
-    "next-auth": "^4.24.11",
+    "next": "^16.0.8",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
