--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@lexical/react": "^0.39.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -38,6 +39,7 @@
     "dotenv": "^17.2.3",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "lexical": "^0.39.0",
     "lucide-react": "^0.543.0",
     "next": "16.0.10",
     "next-intl": "^4.6.1",
