--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts",
+    "translation:export": "tsx scripts/translation-export.ts export",
+    "translation:import": "tsx scripts/translation-export.ts import",
+    "translation:backup": "tsx scripts/translation-export.ts backup"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
