--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dotenv": "^17.2.3",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "google-auth-library": "^10.5.0",
     "lucide-react": "^0.543.0",
     "next": "16.0.10",
     "next-intl": "^4.6.1",
