--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,5 +1,11 @@
 {
- "name": "App",
+ "name": "Bouwmatcher",
+ "short_name": "Bouwmatcher",
+ "description": "Connect with home improvement professionals",
+ "start_url": "/",
+ "display": "standalone",
+ "background_color": "#ffffff",
+ "theme_color": "#2563eb",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
